Fixed alignment, changed header title

--- a/src/Board.css
+++ b/src/Board.css
@@ -11,6 +11,8 @@
 }
 .bigboard-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   width: 90%;
 }
@@ -22,7 +24,7 @@
   height: 100%;
 }
 .button-container {
-  margin-top: 1%;
+  margin-top: 3%;
   display: flex;
   justify-content: center;
   align-items: center;
